[package]
name = "neo"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
description = "neo in rust"
edition = "2018"

[lib]
path = "neo/lib.rs"


[[bin]]
name = "neo"
path = "neo/main.rs"

[workspace]
members = ["neo_core", "Wallets", "Network", "Cryptography", "SGX", "Transaction", "VM", "Persistence", "Ledger","IO","SmartContract"]

[dependencies]
neo_core = { path = "./neo_core" }
neo_crypto = { path = "./Cryptography" }

scrypt = { version = "0.6.3", default-features = false }

arrayvec = { version = "0.6.0" }
base58 = { version = "0.1" }
clap = { version = "~2.33.1" }
colored = { version = "2.0" }
digest = { version = "0.9.0" }

failure = { version = "0.1.8" }
hex = { version = "0.4.2" }
lazy_static = { version = "1.4.0" }

rand = { version = "0.8" }
rand_core = { version = "0.6.2" }

safemem = { version = "0.3.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

vrf = "0.2.2"
[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true
