[package]
name = "neo_crypto"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
edition = "2018"


[dependencies]
hmac = "0.11.0"
aes-soft = "0.99.99"
sha3 = "0.10.0"
block-modes = "0.8.1"
merkletree = "0.21.0"

[dependencies.fake-simd]
version = "0.1"

[dependencies.libc]
version = "0.2.68"
optional = true

[dependencies.failure]
version = "0.1.5"

[dependencies.hmac-sha256]
version = "1.0.0"

[dependencies.openssl]
version = "0.10"

[dependencies.block-buffer]
version = "0.9"

[dependencies.digest]
version = "0.10"

[dependencies.opaque-debug]
version = "0.3"

[dependencies.cipher]
version = "0.3"


[features]
default = ["std"]
std = ["digest/std"]

compress = []


force-soft = []

[target."cfg(all(target_arch = \"aarch64\", target_os = \"linux\"))".dependencies.libc]
version = "0.2.84"
optional = true
