[package]
name = "SGX"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fortanix-sgx-tools = "0.4.3"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
rand = "0.6.4"