[package]
name = "neo_tx"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

neo_wallet = {path="../Wallets"}
neo_crypto = { path = "../Cryptography"}
neo_core = { path = "../neo_core"}

num-bigint = "0.4.0"

serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.62", default-features = false }