[package]
name = "VM"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

indexmap = "1.6.2"
num = "0.4.0"
getset = "0.1.2"
log = { version = "0.4", default-features = false }
#evm-core = { version = "0.35", path = "core", default-features = false }
#evm-gasometer = { version = "0.35", path = "gasometer", default-features = false }
#evm-runtime = { version = "0.35", path = "runtime", default-features = false }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5", default-features = false }
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"], optional = true }
ethereum = { version = "0.12", default-features = false }
environmental = { version = "1.1.2", default-features = false, optional = true }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"], optional = true }
auto_impl = "0.5.0"