[package]
name = "Wallet"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

neo_crypto = { path = "../Cryptography"}
neo_core = { path = "../neo_core"}

regex = "1.4.3"
scrypt = { version = "0.6.3", default-features = false }