[package]
name = "neo_wallet"
version = "0.1.0"
authors = ["Jinghui Liao <jinghui@wayne.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

neo_crypto = { path = "../Cryptography"}
neo_core = { path = "../neo_core"}

regex = "1.4.3"
scrypt = { version = "0.8.0", default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.123", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.62", default-features = false }
failure = { version = "0.1.8" }