[package]
name = "neo_core"
version = "0.1.0"
edition = "2018"

[dependencies]

neo_crypto = { path = "../Cryptography" }

hex-literal = "0.3.1"

#hex = { version = "0.4.3", default-features = false }

slice_as_array = { version = "1.1.0", default-features = false }
bech32 = { version = "0.6" }
byteorder = { version = "1", default-features = false }
ff = { version = "0.6.0", optional = true }
failure = { version = "0.1.8", default-features = false, features = ["derive"] }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
rlp = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uint = { version = "0.9.0", default-features = false }

[features]
default = ["std"]
std = ["ff"]